Add dotnet tools. Add cascade delete check

--- a/src/Shared/Shared.Localization/Resources/Locale.ru-ru.resx
+++ b/src/Shared/Shared.Localization/Resources/Locale.ru-ru.resx
@@ -50,4 +50,7 @@
     <data name="errors.InvalidClaims" xml:space="preserve">
         <value>Разрешения {0} не существуют</value>
     </data>
+    <data name="errors.CascadeDeleteRestricted" xml:space="preserve">
+        <value>Невозможно удалить: {0}. Удаление приведет к каскадным изменениям.</value>
+    </data>
 </root>
