--- a/src/Shared/Shared.Localization/Resources/Locale.resx
+++ b/src/Shared/Shared.Localization/Resources/Locale.resx
@@ -57,4 +57,7 @@
     <data name="errors.InvalidClaims" xml:space="preserve">
         <value>Claims {0} are invalid</value>
     </data>
+    <data name="errors.CascadeDeleteRestricted" xml:space="preserve">
+        <value>Can't delete: {0}. Deleting entity will cause cascade deletes</value>
+    </data>
 </root>
